# ARiADNE2-ROS-Planner

./: README.md
src/: CMakeLists.txt  package.xml
src/launch/: ariadne2_campus.launch  ariadne2_real_robot.launch  map_handler.launch  terrain_segmentation.launch
src/rviz/: rviz.rviz
src/src/: collision_checker.cpp  map_handler.cpp  terrain_segmentation.cpp
