<?xml version="1.0"?>
<package format="2">
  <name>ariadne2</name>
  <version>0.0.0</version>
  <description>The ARiADNE2 planner package</description>


  <maintainer email="caoyuhong@nus.edu.sg">Cao Yuhong</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pybind11</build_depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>nav_msgs</depend>
  <depend>octomap_ros</depend>
  <depend>octomap_msgs</depend>
  <depend>libpcl-dev</depend>
  <depend>liboctomap-dev</depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pybind11</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
